# StaticEncrypt

./: .gitignore  LICENSE  README.md  decrypt.html  encrypt.py  md2html.py  pyproject.toml  sample-mini.html
.github/workflows/: workflow.yml
resources/: large.html  sample-html.html  sample.html  sample.md  style.css
static_encrypt/: __init__.py  __main__.py  decrypt_template.html  encrypt.py  md2html.py  minify.py
staticrypt/: __main__.py  decrypt_template.html
tests/: __init__.py  test_md2html.py  test_protect_command.py
