[project]
name = "staticencrypt"
version = "0.1.0"
description = "host secure, password-protected static sites"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
