[project]
name = "staticrypt"
version = "0.1.1"
description = "host secure, password-protected static sites"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "markdown>=3.10.2",
    "minify-html>=0.18.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.setuptools]
packages = ["staticrypt"]

[project.scripts]
staticrypt = "staticrypt.__main__:main"

